api remove subscriber id
